- Added support for invocation as a Lambda, triggered by S3 upload. - Slight refactoring of Reader/Writer factories.